compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.fir.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride valueOf(java.lang.String) throws java.lang.IllegalArgumentException, java.lang.NullPointerException;//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride[] values();//  values()

  @org.jetbrains.annotations.NotNull()
  public static kotlin.enums.EnumEntries<EnumNameOverride> getEntries();//  getEntries()

  private  EnumNameOverride();//  .ctor()

}
